make some minor updates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,15 +18,18 @@
 <main>
   <div class="container">
     <div class="sidebar">
+      <label><em>Product Names</em>:</label>
       <select class="dropdown-select section" id="option 1">
-        <option selected>Product Names</option>
       </select>
+
+      <label><em>Product SKU</em>:</label>
       <select class="dropdown-select section" id="option 2">
-        <option  selected disabled>Product SKU</option>
       </select>
+
+      <label><em>Category</em>:</label>
       <select class="dropdown-select section" id="option 3">
-        <option selected>Category</option>
       </select>
+
       <div class="ch" id="">
         <p><em>Sort By Price: </em></p>
         <label>
