--- a/app/static/index.css
+++ b/app/static/index.css
@@ -68,7 +68,7 @@ main {
 .container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.8rem;
 }
 
 @media(min-width: 768px) {
@@ -97,10 +97,10 @@ main {
 }
 
 .content {
-  flex: 2;
+  flex: 3;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.8rem;
 }
 
 textarea, input[type="text"] {
@@ -186,9 +186,6 @@ a{
   
 }
   
-#apikeys{
-  display: none;
-}
 
 .loader {
   position: fixed;
@@ -224,3 +221,47 @@ a{
 .hidden {
   display: none;
 }
+
+
+.key { color: rgb(255, 255, 255); }
+.string { color: #21dd66; }      /* green for strings */
+.number { color: #ff9900ec; }    /* orange for numbers */
+.boolean { color: #1a50a1; }     /* blue for booleans */
+.null { color: #dd1435; }        /* red for nulls/errors */
+
+.data-holder {
+  position: relative;            /* to position button absolutely */
+  border: 1px solid rgb(41, 39, 39);
+  border-radius: 5px;
+  background-color: rgb(0, 0, 0);
+  padding: 25px;
+  overflow-x: auto;
+
+}
+pre{
+    white-space: pre-wrap;
+    word-break: break-word;
+    overflow: auto;
+    max-height: 400px;
+    color: white;
+}
+
+pre:empty::before {
+  content: attr(data-placeholder);
+  color: rgb(255, 255, 255);
+  font-style: italic;
+}
+
+
+.smallBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 10px;
+  color: white;
+  background-color: transparent;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+    
