--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,8 +10,12 @@
       <div>{{form.username(id='username', placeholder='Username')}}</div>
       <div>{{form.password(id='password', placeholder='Password')}}</div>
       <div>{{form.submit(id='form_btn', class='action_btn')}}</div>
+      <div>
+        {{form.accept_terms()}}
+      </div>
     </form>
       <br>
+
       <div class="lodin"><p style="text-align: center; font-size: 12px;"> don't have an account 
         <a href="{{url_for('auth_bp.register')}}">register</a></p></div>
       <div style="text-align: center; font-size: 10px;">&copy; 2025</div>
