--- a/app/static/index.css
+++ b/app/static/index.css
@@ -60,7 +60,7 @@ header {
 main {
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 4px;
   gap: 1rem;
 }
@@ -73,11 +73,12 @@ main {
 
 @media(min-width: 768px) {
   .container {
-    flex-direction: row;
+    flex-direction: column;
   }
 }
 
 .sidebar {
+  max-height: 600px;
   flex: 1;
   background: white;
   padding: 6px;
@@ -103,21 +104,20 @@ main {
   gap: 0.8rem;
 }
 
-textarea, input[type="text"] {
-  width: 100%;
-  padding: 0.75rem;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  font-size: 1rem;
+.search-section {
   display: flex;
+  gap: 0.3rem;
+  justify-content: center;
   
 }
 
-.search-section {
-  display: flex;
-  gap: 0.5rem;
-}
+.search-section input{
+  width: 53vw;
+  padding: 1px;
+  border: 1px solid transparent;
+  border-radius: 5px;
 
+}
 .search-btn {
   padding: 0.75rem 1.25rem;
   background: #3182ce;
@@ -125,6 +125,27 @@ textarea, input[type="text"] {
   border: none;
   border-radius: 6px;
   cursor: pointer;
+}
+
+/* Notification styles */
+.notification {
+  position: absolute;
+  top: -50px;
+  left: 37%;
+  border-radius: 10px;
+  width: fit-content;
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 35px;
+  text-align: center;
+  font-size: 16px;
+  white-space: nowrap;
+  transition: top 0.7s ease-in-out;
+  z-index: 1000;
+}
+
+.notification.show {
+  top: 0;
 }
 
 footer {
@@ -242,7 +263,7 @@ pre{
     white-space: pre-wrap;
     word-break: break-word;
     overflow: auto;
-    max-height: 400px;
+    max-height: 420px;
     color: white;
 }
 
@@ -264,4 +285,46 @@ pre:empty::before {
   cursor: pointer;
 }
 
-    
+.overlay-dropdown {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(8px);
+  background-color: rgba(0, 0, 0, 0.6);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  text-align: center;
+  padding: 2rem;
+}
+
+.overlay-dropdown.show {
+  display: flex;
+}
+
+.overlay-content {
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 2rem;
+  border-radius: 10px;
+  color: white;
+  max-width: 500px;
+  width: 90%;
+  box-shadow: 0 8px 32px rgba(0,0,0,0.2);
+}
+
+.overlay-content button {
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  background: #3f72af;
+  border: none;
+  color: white;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.overlay-content button:hover {
+  background: #28527a;
+}
