--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,8 +3,6 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ url_for('static', filename='index.css')}}">
         <link rel="stylesheet" href="{{ url_for('static', filename='auth.css')}}">
         <script src="{{ url_for('static', filename='index.js')}}" defer></script>
@@ -19,12 +17,26 @@
         <div id="not" data-success="{{ '1' if signup_success else '0'}}"></div>
         {% block content%} {% endblock %}
         <footer>
-        <div class="footer-links">
-            <a href="#">Contact</a>
-            <a onclick="about_func()">About</a>
-            <a href="{{url_for('auth_bp.logout') if signup_success else url_for('auth_bp.register')}}">{{'Log out' if signup_success else 'Sign Up'}}</a>
-        </div>
-        <div>&copy; 2025</div>
+            <div class="footer-links">
+                <a onclick="toggleDropdown('contact')">Contact</a>
+                <a onclick="toggleDropdown('about')">About</a>
+                <a href="{{url_for('auth_bp.logout')}}">Log out</a>
+            </div>
+            <div id="about" class="overlay-dropdown">
+                <div class="overlay-content">
+                <p>Dummyweb is a demo website for UI practice. Built with love in 2025.</p>
+                <button onclick="closeDropdown()">Close</button>
+                </div>
+            </div>
+          
+            <div id="contact" class="overlay-dropdown">
+                <div class="overlay-content">
+                <p>Email: support@dummyweb.com<br>Twitter: @dummyweb</p>
+                <button onclick="closeDropdown()">Close</button>
+                </div>
+            </div>
+            <br>
+            <div>&copy; 2025</div>
         </footer>
         {% set messages = get_flashed_messages(with_categories=true)%}
         {% if messages %}
