--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -138,6 +138,8 @@
         background: #28527a;
       }
   </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="path/to/your/fontawesome/css/all.min.css">
   <script src="{{ url_for('static', filename='index.js')}}" defer></script>
 </head>
 <body>
