--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,8 @@
         <button class="search-btn" onclick="search_product()">Search</button>
       </div>
       <div class="data-holder">
-        <button class="smallBtn" onclick="copyJSON(this)">Copy</button>
+        <button class="smallBtn" id="smallBtn" onclick="copyJSON(this)">Copy</button>
+        <br><br>
         <pre id="txt-data" data-placeholder="Data from API"></pre>
       </div>      
     </div>
