--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+        <link rel="stylesheet" href="path/to/your/fontawesome/css/all.min.css">
         <link rel="stylesheet" href="{{ url_for('static', filename='index.css')}}">
         <link rel="stylesheet" href="{{ url_for('static', filename='auth.css')}}">
         <script src="{{ url_for('static', filename='index.js')}}" defer></script>
